[package]
name = "screen-wake-lock"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
cfg-if = "1"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
objc2-io-kit = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Power",
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.12", features = ["blocking"] }
